--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^5.1.1",
-    "react-scripts": "1.1.5",
+    "react-scripts": "^2.1.3",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "ws": "^6.1.2"
